tests/PhiCore/compile_failure/src/core/observer_ptr/not_null_assign_nullptr.fail.cpp
#include <phi/core/observer_ptr.hpp>

int main()
{
    int                             i = 16;
    phi::not_null_observer_ptr<int> ptr(&i);

    ptr = nullptr;
}
